- finished MainActivity - started GamePreparationActivity, but still not completed